# final-nn

./: README.md  Unit Tests.ipynb  Untitled.ipynb  make_classifier.ipynb  pyproject.toml  train_autoencoder.ipynb
.github/workflows/: test.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
